--- a/style.css
+++ b/style.css
@@ -51,13 +51,11 @@ b {
 /* SIDEBAR BOX */
 
 .sidebar-box {
-    /*position: absolute;
-    top:-50px;
-    z-index:100;*/
+    position: relative;
 }
 
-.outer-wrapper {
-    
+.outer-wrapper-sidebar {
+   clear:both;
 }
 /* DESCRIPTION */
 
@@ -70,6 +68,18 @@ b {
     -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.12);
     -moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.12);
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.12);
+    position: absolute;
+    top:-50px;
+    clear:both;
+
+}
+
+.description h1 {
+    margin-top:-70px;
+}
+
+.wip-text-box h1 {
+    margin-top:100px;
 }
 
 .link-box {
@@ -81,9 +91,13 @@ b {
 .description-image {
     height:168px;
     text-align:center;
+    position:relative;
 }
 
 .description-icon {
+    position:absolute;
+    top:-80px;
+    left:90px;
 }
 
 .description-box {
@@ -137,15 +151,24 @@ b {
     -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.12);
     -moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.12);
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.12);
+    clear:both;
 }
 
 .wip-img-box {
     text-align:center;
+    position:relative;
+}
+
+.wip-img {
+    position:absolute;
+    top:-30px;
+    left:30px;
 }
 
 .wip-text-box {
     padding:10px 30px;
     text-align:justify;
+    margin-top:50px;
 }
 
 .wip-text-box h2 {
@@ -154,6 +177,7 @@ b {
     font-weight: normal;
     text-align:center;
     margin-bottom:10px;
+    
 }
 
 .wip-text {
@@ -162,11 +186,16 @@ b {
     text-transform: uppercase;
 }
 
+.move {
+    margin-top:730px;
+}
+
 
 /* POSTS */
 
 .post-box {
     width:540px;
+    position:relative;
 }
 
 .post {
@@ -181,6 +210,11 @@ b {
 .inner-wrapper {
     width:540px;
 
+}
+
+.outer-wrapper {
+    position:absolute;
+    top:-50px;
 }
 
 .post-info {
